# sciona-atoms-physics

./: .gitignore  PHYSICS_INGESTION.md  README.md  pyproject.toml
data/: audit_manifest.json
docs/: PDGs.md  PHASE4_SYMPY_MIGRATION_PLAN.md  quantum_optional_dependencies.md  searching.md
scripts/: __init__.py  _sciona_runtime.py  physics_ingest_pdg_first_wave.py  physics_ingest_pdg_remote_wave.py  physics_ingest_wikidata_candidates.py  physics_inventory_pdg_remote.py  reseed_physics_supabase.py
tests/: test_astroflow_import_smoke.py  test_funnel_index_fields.py  test_import_smoke.py  test_jfof_behavior.py  test_jfof_import_smoke.py  test_license_manifest.py  test_particle_tracking_detector_corrections_behavior.py  test_particle_tracking_detector_corrections_review_bundle.py  test_particle_tracking_helix_geometry_behavior.py  test_particle_tracking_helix_geometry_references_metadata.py  test_particle_tracking_helix_geometry_review_bundle.py  test_particle_tracking_helix_geometry_symbolic_metadata.py  test_particle_tracking_track_matching_behavior.py  test_particle_tracking_track_matching_import_smoke.py  test_particle_tracking_track_matching_review_bundle.py  test_pasqal_docking_behavior.py  test_pasqal_import_smoke.py  test_pasqal_quantum_optional.py  test_physics_ingestion_reseed.py  test_pulsar_behavior.py  test_pulsar_folding_import_smoke.py  test_pulsar_folding_references_metadata.py  test_pulsar_folding_remainder_behavior.py  test_pulsar_import_smoke.py  test_review_bundle_astroflow.py  test_review_bundle_jfof.py  test_review_bundle_pasqal.py  (+31 more)
(+198 files in other folders)
