[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciona-atoms-physics"
version = "0.1.0"
description = "Physics provider repo for sciona.atoms.* and sciona.probes.*"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "icontract",
  "juliacall>=0.9",
  "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
