[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciona-atoms-physics"
version = "0.1.0"
description = "Physics provider repo for sciona.atoms.* and sciona.probes.*"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "icontract",
  "juliacall>=0.9",
  "networkx",
  "numpy",
  "sciona",
]

[project.optional-dependencies]
quantum = [
  "emu-mps==2.7.2",
  "emu-sv==2.7.2",
  "pulser==1.7.2",
  "pulser-simulation==1.7.2",
  "qutip==5.2.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
